css/style.css
*{
  margin: 0;
  padding: 0;
}

body{
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-size: 150%;
}

header{
  background-color: blue;
}

nav{
  background-color: aqua;
}

main{
  background-color: navy;
  font-size: 1.5rem;
}

footer{
  background-color: aquamarine;
}

li{
  display: inline-block;
  padding: 1rem;
}

h1{
  text-align: center;
  font-family: Georgia, "Times New Roman", serif;
  color: white;
}

p{
  line-height: 1.3;
}

